--- a/web/.htaccess
+++ b/web/.htaccess
@@ -15,3 +15,6 @@ SetEnv RABBIT_HOST ${RABBIT_HOST}
 SetEnv RABBIT_PORT ${RABBIT_PORT}
 SetEnv RABBIT_USER ${RABBIT_USER}
 SetEnv RABBIT_PASS ${RABBIT_PASS}
+SetEnv S3_LOCATIONS_QTY ${S3_LOCATIONS_QTY}
+SetEnv S3_LOCATIONS_DEFAULT ${S3_LOCATIONS_DEFAULT}
+SetEnv S3_LOCATION_1 ${S3_LOCATION_1}
