--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ YII_ENV=dev
 
 MANAGER_DB_DSN=pgsql:host=host.docker.internal;port=5432;dbname=babylon_saas;user=postgres;password=123
 INSTANCE_DB_HOST=host.docker.internal
+#INSTANCE_DB_SSL=required
 
 # sometimes you might need a permanent connection to one of the instances (e.g. for model generation via GII)
 INSTANCE_DB_DSN_DEV=pgsql:host=host.docker.internal;port=5432;dbname=i1;user=postgres;password=123
