--- a/web/.htaccess
+++ b/web/.htaccess
@@ -11,6 +11,8 @@ SetEnv CACHE_MEMCACHED_HOST ${CACHE_MEMCACHED_HOST}
 SetEnv CACHE_MEMCACHED_PORT ${CACHE_MEMCACHED_PORT}
 SetEnv MANAGER_DB_DSN ${MANAGER_DB_DSN}
 SetEnv INSTANCE_DB_HOST ${INSTANCE_DB_HOST}
+SetEnv INSTANCE_DB_PORT ${INSTANCE_DB_PORT}
+SetEnv INSTANCE_DB_SSL ${INSTANCE_DB_SSL}
 SetEnv RABBIT_HOST ${RABBIT_HOST}
 SetEnv RABBIT_PORT ${RABBIT_PORT}
 SetEnv RABBIT_USER ${RABBIT_USER}
