--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ RABBIT_PASS=guest
 S3_LOCATIONS_QTY=1
 S3_LOCATIONS_DEFAULT=bucket
 S3_LOCATION_1=bucket:endpoint:region:size:key:secret:
+
+# log targets, by default - stream
+#LOG_TO=stream,file
