--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
+        platforms: linux/amd64,linux/arm64
         file: ./.docker/php.Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/boundless-commerce-api-apache:latest
